Se crea el primer componente con Tailwind

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl":"src",
+
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@styles/*":["styles/*"]
+
     }
   }
 }
