--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,11 @@
 
     "paths": {
       "@/*": ["./src/*"],
-      "@styles/*":["styles/*"]
+      "@styles/*":["styles/*"],
+      "@common/*":["common/*"],
+      "@components/*":["components/*"],
+
+
 
     }
   }
