Se agrega la peticion de los productos

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,10 @@
       "@styles/*":["styles/*"],
       "@common/*":["common/*"],
       "@components/*":["components/*"],
+      "@hooks/*":["hooks/*"],
+      "@services/*":["services/*"],
+
+
 
 
 
