--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
-    "@heroicons/react": "^2.0.18",
+    "axios": "^0.27.2",
+    "js-cookie": "^3.0.5",
     "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "@heroicons/react": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
