--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.0",
     "axios": "^0.27.2",
+    "chart.js": "^4.3.0",
     "js-cookie": "^3.0.5",
     "next": "13.4.12",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "@heroicons/react": "^2.0.0"
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
