--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "chart.js": "^4.3.0",
     "js-cookie": "^3.0.5",
     "next": "13.4.12",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1"
   },
   "devDependencies": {
