--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.0",
+    "@tailwindcss/forms": "^0.5.4",
     "axios": "^0.27.2",
     "chart.js": "^4.3.0",
     "js-cookie": "^3.0.5",
